...
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_planner">Planner</string>
    <string name="title_activity_my_trips">MyTrips</string>
    <string name="title_activity_wishlist">Wishlist</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="side_navbar_open">Open Navbar</string>
    <string name="side_navbar_close">Close Navbar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="Utilities">
        <item>Currency Converter</item>
...
